post RC_1 updates

--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -42,7 +42,8 @@ and some of its utilities.</p>
 <p>General User Guides</p>
 <p>Basic guide to HSQLDB: <a href="doc/hsqlGuide.html">hsqlGuide.html</a><br>
   Beginners guide for unix and linux deployment. <a href="doc/hsqlBeginnersGuide.html">hsqlBeginnersGuide.html</a><br>
-  Detailed description of connection protocols, use of indexes and other topics. <a href="doc/hsqlAdvancedGuide.html">hsqlAdvancedGuide.html</a><br>
+  Detailed description of connection protocols and other system  topics. <a href="doc/hsqlAdvancedGuide.html">hsqlAdvancedGuide.html</a><br>
+  Detailed description of  use of  types, constraints, indexes and other SQL topics. <a href="doc/hsqlAdvancedGuide.html">hsqlSQLGuide.html</a><br>
   Guide to TEXT Tables: <a href="doc/hsqlTextTables.html">hsqlTextTables.html</a>
 <br>
   SQL Syntax Guide: <a href="doc/hsqlSyntax.html">hsqlSyntax.html</a><br>
