--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -48,6 +48,8 @@ HTML pages with HSQLDB embedded as an applet.</p>
 </p>
 <p>list of changes in version 1.7.2 <a href="doc/changelog_1_7_2.txt">changelog_1_7_2.txt</a> 
   <br>
+  chronological list of changes in version 1.7.2 <a href="doc/changelist_1_7_2.txt">changelist_1_7_2.txt</a> 
+  <br>
   list of changes until version 1.7.1 <a href="doc/changelog_1_7_1.txt">changelog_1_7_1.txt</a> 
 </p>
 
@@ -66,6 +68,10 @@ deployment. </p>
 <h4>src</h4>
 
 <p>All source code is in this directory. </p>
+<h4>testrun</h4>
+<p>Contains test scripts for the database engine andSqlTool. </p>
+<p></p>
+<p>&nbsp;</p>
 
 <p>fredt@users
 </p>
