post RC6c updates

--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -70,11 +70,9 @@ deployment. </p>
 <p>All source code is in this directory. </p>
 <h4>testrun</h4>
 <p>Contains test scripts for the database engine andSqlTool. </p>
-<p></p>
-<p>&nbsp;</p>
-
-<p>fredt@users
-</p>
+<p>June 2004</p>
+<p>Fred Toussi<br>
+  fredt (at) users.sourceforge.net</p>
 <p><a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;</p>
 </body>
 </html>
