post RC6c updates

--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -19,8 +19,8 @@ server and an MSDOS batch file for running the hsqldb utilities. </p>
 
 <h4>build</h4>
 
-<p>This directory contains the ant build.xml script plus Linux /
-Unix and MSDOS batch file for build. See <a
+<p>This directory contains the ant build.xml script plus MSDOS batch file for 
+  build. See <a
 href="build/readmebuild.txt">readmebuild.txt</a> </p>
 
 <h4>classes</h4>
