--- a/base-one/trunk/website/index.html
+++ b/base-one/trunk/website/index.html
@@ -57,8 +57,8 @@ rel=copyright href="http://hsqldb.sourceforge.net">
       <tbody> 
       <tr bgcolor="#FFFFFF"> 
         <th valign="middle" align="center" height="62"> 
-          <p><a href="http://sourceforge.net/project/showfiles.php?group_id=23316&release_id=254279">Download 
-            current stable version: 1.7.2 revision 7</a><br>
+          <p><a href="http://sourceforge.net/project/showfiles.php?group_id=23316&release_id=287789">Download 
+            current stable version: 1.7.3</a><br>
             <b><a href="http://cvs.sourceforge.net/cvstarballs/hsqldb-cvsroot.tar.bz2">Download 
             nightly CVS tarball of version under development</a></b></p>
         </th>
@@ -115,8 +115,8 @@ rel=copyright href="http://hsqldb.sourceforge.net">
  
 <a href="http://sourceforge.net"> <img src="http://sourceforge.net/sflogo.php?group_id=23316" width="95" height="32" border="0" alt="SourceForge Logo"></a> 
 <!-- #BeginEditable "extralogo" --><a href="http://www.kattare.com"><img src="images/kattare-logo.jpg" width="273" height="38" border="0" alt="Our ISP...The BEST on the planet!!!"></a><!-- #EndEditable --> 
-<h6 align="center"> This page last updated <!-- #BeginEditable "update" -->23 
-  October 2004<!-- #EndEditable --></h6>
+<h6 align="center"> This page last updated <!-- #BeginEditable "update" -->29 
+  November 2004<!-- #EndEditable --></h6>
 <h6> Java is a Trademark of Sun Microsystems, Inc. (under various licenses). <i>Contents 
   of this page are &copy;2001-2004 <a href="http://hsqldb.sourceforge.net" target="_top">The 
   hsqldb Development Group.</a> All rights reserved under the terms of the applicable 
