--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -8,7 +8,7 @@ content="text/html; charset=iso-8859-1">
 
 <body>
 
-<h3>hsqldb version 1.7.2 Download</h3>
+<h3>hsqldb version 1.7.3 Download</h3>
 
 <p>This download contains the following files and directories: </p>
 
@@ -46,7 +46,9 @@ HTML pages with HSQLDB embedded as an applet.</p>
 </p>
 <p>Sample Find File application: <A HREF="doc/hsqlFindFile.html">hsqlFindFile.html</A><br>
 </p>
-<p>list of changes in version 1.7.2 <a href="doc/changelog_1_7_2.txt">changelog_1_7_2.txt</a> 
+<p>chronological list of changes in version 1.7.3 <a href="doc/changelist_1_7_3.txt">changelist_1_7_3.txt</a> 
+  <br>
+  list of changes in version 1.7.2 <a href="doc/changelog_1_7_2.txt">changelog_1_7_2.txt</a> 
   <br>
   chronological list of changes in version 1.7.2 <a href="doc/changelist_1_7_2.txt">changelist_1_7_2.txt</a> 
   <br>
@@ -70,7 +72,7 @@ deployment. </p>
 <p>All source code is in this directory. </p>
 <h4>testrun</h4>
 <p>Contains test scripts for the database engine andSqlTool. </p>
-<p>June 2004</p>
+<p>Dec 2004</p>
 <p>Fred Toussi<br>
   fredt (at) users.sourceforge.net</p>
 <p><a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;</p>
