--- a/base-one/trunk/website/index.html
+++ b/base-one/trunk/website/index.html
@@ -21,29 +21,50 @@ rel=copyright href="http://hsqldb.sourceforge.net">
 <body text=#000000 vlink=#0000FF alink=#00FF00 link=#0000FF bgcolor=#FFFFFF>
 <table width="100%" summary=Navigation class="topbox">
   <tr> 
-      
     <td> 
-      <h3><a href="http://hsqldb.sourceforge.net"><img src="images/line-1.gif" width="154" height="59" alt="hsqldb.org Home Page" border="0" align="top"></a> 
-        <a href="index.html" target="_top"><font color="#0000FF">hsqldb</font></a> 
-        - 100% Java Database </h3>
+      <h3>
+      	<a href="http://hsqldb.sourceforge.net">
+      		<img src="../images/line-1.gif" width="154" height="59" alt="hsqldb.org Home Page" border="0" align="top">
+        </a> 
+        <a href="../index.html" target="_top">
+        	<font color="#0000FF">hsqldb</font>
+        </a> 
+        - 100% Java Database
+      </h3>
       <p>Lightweight 100% Java SQL Database Engine<br>
-            <font size="-7">A Project of <a href="http://hsqldb.sourceforge.net" target="_top">the 
-        hsqldb Development Team</a></font></p>
-         </td>
+      	<font size="-7">
+      		A Project of 
+      			<a href="http://hsqldb.sourceforge.net" target="_top">the hsqldb Development Team
+      			</a>
+      	</font>
+   	  </p>
+    </td>
       <td valign=top width="45%"> 
          <dl> 
-            <dt><font size="-1">General </font> 
-            
-        <dd><font size="-1">&lt;<a href="http://sourceforge.net/project/showfiles.php?group_id=23316&release_id=254279" target="_top">Download</a>&gt; 
-          &lt;<a href="http://sourceforge.net/news/?group_id=23316" target="_top">News</a>&gt;&lt;<a href="http://sourceforge.net/projects/hsqldb" target="_top">Project 
-          Page</a>&gt; &lt;<a 
-        href="web/hsqlLicense.html" target="_top">License</a>&gt; </font> 
-        <dt><font size="-1">Contact and Support </font> 
-            <dd><font size="-1"> &lt;<a href="web/hsqlSupport.html" target="_top">Support</a>&gt;  &lt;<a href="web/hsqlFAQ.html" target="_top">FAQ</a>&gt; 
-          </font> 
-            <dt><font size="-1">Documentation and Development </font> 
-            <dd><font size="-1">&lt;<a href="web/hsqlFeatures.html" target="_top">Features</a>&gt; 
-          &lt;<a href="web/hsqlDocsFrame.html" target="_top">Documentation</a>&gt; &lt;<a href="web/hsqlDevelopment.html" target="_top">Developers</a>&gt; &lt;<a href="web/changelog.html" target="_top">Changes</a>&gt; </font></dd>
+            <dt><font size="-1">General</font> 
+            <dd>
+            	<font size="-1">
+            	&lt;<a href="http://sourceforge.net/project/showfiles.php?group_id=23316&release_id=254279" target="_top">Download</a>&gt; 
+          		&lt;<a href="http://sourceforge.net/news/?group_id=23316" target="_top">News</a>&gt;
+          		&lt;<a href="http://sourceforge.net/projects/hsqldb" target="_top">Project Page</a>&gt; 
+          		&lt;<a href="../web/hsqlLicense.html" target="_top">License</a>&gt;
+          		</font> 
+        	<dt><font size="-1">Contact, Projects and Support</font> 
+            <dd>
+            	<font size="-1">
+            	&lt;<a href="../web/hsqlSupport.html" target="_top">Support</a>&gt;
+                &lt;<a href="../web/hsqlUsing.html" target="_top">Projects using HSQLDB</a>&gt; 
+		  		&lt;<a href="../web/hsqlFAQ.html" target="_top">FAQ</a>&gt; 
+          		</font> 
+            <dt><font size="-1">Documentation and Development</font> 
+            <dd>
+            	<font size="-1">
+            	&lt;<a href="../web/hsqlFeatures.html" target="_top">Features</a>&gt; 
+          		&lt;<a href="../web/hsqlDocsFrame.html" target="_top">Documentation</a>&gt;
+				&lt;<a href="../web/hsqlDevelopment.html" target="_top">Developers</a>&gt;
+				&lt;<a href="../web/changelog.html" target="_top">Changes</a>&gt;
+				</font>
+			</dd>
          </dl>
       </td>
    </tr>
