--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -10,6 +10,10 @@ content="text/html; charset=iso-8859-1">
 
 <h3>hsqldb version 1.7.3 Download</h3>
 
+<p>HSQLDB is a relational database engine written in Java. Version 1.7.3 is the 
+  result of over 2 years of development since 1.7.1. There are quite a large number 
+  of changes and new features compared to 1.7.1. Please read the documentation 
+  for details.</p>
 <p>This download contains the following files and directories: </p>
 
 <p><b>bin</b></p>
