--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -8,11 +8,11 @@ content="text/html; charset=iso-8859-1">
 
 <body>
 
-<h3>hsqldb version 1.7.3 Download</h3>
+<h3>hsqldb version 1.8.0 Download</h3>
 
-<p>HSQLDB is a relational database engine written in Java. Version 1.7.3 is the 
-  result of over 2 years of development since 1.7.1. There are quite a large number 
-  of changes and new features compared to 1.7.1. Please read the documentation 
+<p>HSQLDB is a relational database engine written in Java. Version 1.8.0 follows 
+  on from 1.7.3 with many new features and improvements. There are quite a large 
+  number of changes and new features compared to 1.7.1. Please read the documentation 
   for details.</p>
 <p>This download contains the following files and directories: </p>
 
@@ -50,7 +50,9 @@ HTML pages with HSQLDB embedded as an applet.</p>
 </p>
 <p>Sample Find File application: <A HREF="doc/hsqlFindFile.html">hsqlFindFile.html</A><br>
 </p>
-<p>chronological list of changes in version 1.7.3 <a href="doc/changelist_1_7_3.txt">changelist_1_7_3.txt</a> 
+<p>chronological list of changes in version 1.8.0<a href="doc/changelist_1_7_3.txt">changelist_1_8_0.txt</a> 
+  <br>
+  chronological list of changes in version 1.7.3 <a href="doc/changelist_1_7_3.txt">changelist_1_7_3.txt</a> 
   <br>
   list of changes in version 1.7.2 <a href="doc/changelog_1_7_2.txt">changelog_1_7_2.txt</a> 
   <br>
@@ -76,7 +78,7 @@ deployment. </p>
 <p>All source code is in this directory. </p>
 <h4>testrun</h4>
 <p>Contains test scripts for the database engine andSqlTool. </p>
-<p>Dec 2004</p>
+<p>April 2005</p>
 <p>Fred Toussi<br>
   fredt (at) users.sourceforge.net</p>
 <p><a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;</p>
