--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -10,10 +10,11 @@ content="text/html; charset=iso-8859-1">
 
 <h3>hsqldb version 1.8.0 Download</h3>
 
-<p>HSQLDB is a relational database engine written in Java. Version 1.8.0 follows 
-  on from 1.7.3 with many new features and improvements. There are quite a large 
-  number of changes and new features compared to 1.7.1. Please read the documentation 
-  for details.</p>
+<p>HSQLDB is a relational database engine written in Java. Version 1.8.0 has many 
+  new features and improvements. There are quite a large number of changes and 
+  new features compared to 1.7.1. Please read the documentation for details. Please 
+  also check the web site at <a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;periodically 
+  for any release updates.</p>
 <p>This download contains the following files and directories: </p>
 
 <p><b>bin</b></p>
@@ -50,7 +51,9 @@ HTML pages with HSQLDB embedded as an applet.</p>
 </p>
 <p>Sample Find File application: <A HREF="doc/hsqlFindFile.html">hsqlFindFile.html</A><br>
 </p>
-<p>chronological list of changes in version 1.8.0<a href="doc/changelist_1_7_3.txt">changelist_1_8_0.txt</a> 
+<p>list of changes in version 1.8.0 <a href="doc/changelog_1_8_0.txt">changelog_1_8_0.txt</a> 
+  <br>
+  chronological list of changes in version 1.8.0 <a href="doc/changelist_1_8_0.txt">changelist_1_8_0.txt</a> 
   <br>
   chronological list of changes in version 1.7.3 <a href="doc/changelist_1_7_3.txt">changelist_1_7_3.txt</a> 
   <br>
@@ -80,7 +83,7 @@ deployment. </p>
 <p>All source code is in this directory. </p>
 <h4>testrun</h4>
 <p>Contains test scripts for the database engine andSqlTool. </p>
-<p>Mayl 2005</p>
+<p>May 2005</p>
 <p>Fred Toussi<br>
   fredt (at) users.sourceforge.net</p>
 <p><a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;</p>
