--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -13,8 +13,9 @@ content="text/html; charset=iso-8859-1">
 <p>HSQLDB is a relational database engine written in Java. Version 1.8.0 has many 
   new features and improvements. There are quite a large number of changes and 
   new features compared to 1.7.1. Please read the documentation for details. Please 
-  also check the web site at <a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;periodically 
-  for any release updates.</p>
+  also check the web site at <a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;periodically 
+  for any release updates. This point release 1.8.0.4 features many bug fixes 
+  introduced since the original release of 1.8.0 in June 2005.</p>
 <p>This download contains the following files and directories: </p>
 
 <p><b>bin</b></p>
