--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -14,7 +14,7 @@ content="text/html; charset=iso-8859-1">
   new features and improvements. There are quite a large number of changes and 
   new features compared to 1.7.1. Please read the documentation for details. Please 
   also check the web site at <a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;periodically 
-  for any release updates. This point release 1.8.0.4 features many bug fixes 
+  for any release updates. This point release 1.8.0.7 features many bug fixes 
   introduced since the original release of 1.8.0 in June 2005.</p>
 <p>This download contains the following files and directories: </p>
 
@@ -84,9 +84,8 @@ deployment. </p>
 <p>All source code is in this directory. </p>
 <h4>testrun</h4>
 <p>Contains test scripts for the database engine and SqlTool. </p>
-<p>June 2005</p>
 <p>Fred Toussi<br>
   fredt (at) users.sourceforge.net</p>
-<p><a href="http://hsqldb.sourceforge.net/" target="_top">http://hsqldb.sourceforge.net</a>&nbsp;</p>
+<p><a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;</p>
 </body>
 </html>
