--- a/dotnet/trunk/System.Data.Hsqldb/Documentation/index.html
+++ b/dotnet/trunk/System.Data.Hsqldb/Documentation/index.html
@@ -40,12 +40,12 @@
             <a href="Chapter 1 - Getting Started/Chapter 1 - Getting Started.html">Chapter 1 - Getting
                 Started</a></h3>
         <ul>
-                <li>Introductory material convering basic concepts and elementary practices</li>
+                <li>Introductory material convering basic concepts and elementary practices.</li>
         </ul>
         <h3>
             <a href="Chapter 2 - SQL Issues/Chapter 2 - SQL Issues.html">Chapter 2 - SQL Issues</a></h3>
         <ul>
-            <li>A discussion of the current SQL limitations and divergence from the SQL standard</li>
+            <li>A discussion of the current SQL limitations and divergence from the SQL standard.</li>
         </ul>
         <h3>
             <a href="Chapter 3 - Deployment Issues/Chapter 3 - Deployment Issues.html">Chapter 3
@@ -58,7 +58,7 @@
             <a href="Chapter 4 - Configuration And Settings/Chapter 4 - Configuration And Settings.html">
                 Chapter 4 - Configuration And Settings</a></h3>
         <ul>
-                <li>In-depth description of the available configuration options and related file formats</li>
+                <li>In-depth description of the available configuration options and related file formats.</li>
         </ul>
         <h3>
             <a href="Chapter 5 - Text Tables/Chapter 5 - Text Tables.html">Chapter 5 - Text Tables</a>
