--- a/dotnet/trunk/System.Data.Hsqldb/Documentation/index.html
+++ b/dotnet/trunk/System.Data.Hsqldb/Documentation/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mshelp="http://msdn.microsoft.com/mshelp" xml:lang="en-ca" lang="en-ca" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mshelp="http://msdn.microsoft.com/mshelp"
+    xml:lang="en-ca" lang="en-ca" dir="ltr">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles/presentation.css"/>
-    <link rel="stylesheet" type="text/css" href="ms-help://Hx/HxRuntime/HxLink.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/presentation.css" />
+    <link rel="stylesheet" type="text/css" href="ms-help://Hx/HxRuntime/HxLink.css" />
     <title>Hsqldb User Guide</title>
 </head>
 <body>
@@ -10,13 +11,13 @@
         <table border="0" width="100%" cellpadding="0" cellspacing="0">
             <tr>
                 <td align="center" valign="top" style="padding-right: 10px">
-                    <img alt="HSQLDB Logo" src="html/hsqldb.gif"/>
+                    <img alt="HSQLDB Logo" src="html/hsqldb.gif" />
                 </td>
                 <td valign="top" width="100%">
                     <span class="productTitle">HSQLDB.NET 1.8.0 User Guide</span>
-                    <br/>
+                    <br />
                     <span class="topicTitle">Documentation Index</span>
-                    <br/>
+                    <br />
                     <div id="toolbar">
                         <span id="chickenFeet"><span class="nolink"></span></span>
                     </div>
@@ -40,7 +41,7 @@
             <a href="Chapter 1 - Getting Started/Chapter 1 - Getting Started.html">Chapter 1 - Getting
                 Started</a></h3>
         <ul>
-                <li>Introductory material convering basic concepts and elementary practices.</li>
+            <li>Introductory material convering basic concepts and elementary practices.</li>
         </ul>
         <h3>
             <a href="Chapter 2 - SQL Issues/Chapter 2 - SQL Issues.html">Chapter 2 - SQL Issues</a></h3>
@@ -51,39 +52,48 @@
             <a href="Chapter 3 - Deployment Issues/Chapter 3 - Deployment Issues.html">Chapter 3
                 - Deployment Issues</a></h3>
         <ul>
-                <li>A discussion of operation modes, choice of table storage engines, large object storage and expected maximum
-                connections as they pertain to consumption of physical memory, operating system resources and disk storage.</li>
+            <li>A discussion of operation modes, choice of table storage engines, large object storage
+                and expected maximum connections as they pertain to consumption of physical memory,
+                operating system resources and disk storage.</li>
         </ul>
         <h3>
             <a href="Chapter 4 - Configuration And Settings/Chapter 4 - Configuration And Settings.html">
                 Chapter 4 - Configuration And Settings</a></h3>
         <ul>
-                <li>In-depth description of the available configuration options and related file formats.</li>
+            <li>In-depth description of the available configuration options and related file formats.</li>
         </ul>
         <h3>
             <a href="Chapter 5 - Text Tables/Chapter 5 - Text Tables.html">Chapter 5 - Text Tables</a>
-            </h3>
+        </h3>
         <ul>
-            <li>In-depth description of the HSQLDB TEXT table storage engine and related configuration options.</li>
+            <li>In-depth description of the HSQLDB TEXT table storage engine and related configuration
+                options.</li>
         </ul>
         <h3>
             <a href="Chapter 6 - Transport Layer Security/Chapter 6 - Transport Layer Security.html">
                 Chapter 6 - Transport Layer Security</a></h3>
         <ul>
-                <li>Brief discussion of setup, requirements and related reading material.</li>
+            <li>Brief discussion of setup, requirements and related reading material.</li>
         </ul>
         <h3>
             <a href="Chapter 7 - SQL Tool/Chapter 7 - SQL Tool.html">Chapter 7 - SQL Tool</a></h3>
         <ul>
-            <li>Brief HOWTO for first-time users, plus a full description of the <tt>sqltool.rc</tt> file.</li>
+            <li>Brief HOWTO for first-time users, plus a full description of the <tt>sqltool.rc</tt>
+                file.</li>
         </ul>
         <h3>
             <a href="Chapter 8 - SQL Syntax/Chapter 8 - SQL Syntax.html">Chapter 8 - SQL Syntax</a></h3>
         <ul>
             <li>In-depth coverage of the HSQLDB SQL Syntax.</li>
         </ul>
+        <div id="footer">
+            <div class="footerLine">
+                <img alt="footer.gif" width="100%" height="3px" src="../icons/footer.gif" title="Footer image" />
+            </div>
+            <include item="footer" />
+        </div>
     </div>
-    <include item="footer" />
 </body>
 </html>
-<!-- @DefaultTopic --><!-- @SortOrder 1 -->
+<!-- @DefaultTopic -->
+<!-- @SortOrder 1 -->
