--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -8,13 +8,13 @@ content="text/html; charset=iso-8859-1">
 
 <body>
 
-<h3>hsqldb version 1.8.0 Download</h3>
+<h3>hsqldb version 1.8.1 Download</h3>
 
-<p>HSQLDB is a relational database engine written in Java. Version 1.8.0 has many 
-  new features and improvements. There are quite a large number of changes and 
+<p>HSQLDB is a relational database engine written in Java. Version 1.8.1 is based on
+  1.8.0 and has some bug fixes, a new feature and some improvements. There are quite a large number of changes and 
   new features compared to 1.7.1. Please read the documentation for details. Please 
   also check the web site at <a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;periodically 
-  for any release updates. This point release 1.8.0.10 features many bug fixes 
+  for any release updates. This point release 1.8.1.1 features many bug fixes 
   introduced since the original release of 1.8.0 in June 2005.</p>
 <p>This download contains the following files and directories: </p>
 
