--- a/base-one/trunk/index.html
+++ b/base-one/trunk/index.html
@@ -1,10 +1,7 @@
-<html>
-
-<head>
-<meta http-equiv="Content-Type"
-content="text/html; charset=iso-8859-1">
-<title>HSQLDB</title>
-</head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>HSQLDB</title></head>
 
 <body>
 
@@ -14,7 +11,7 @@ content="text/html; charset=iso-8859-1">
   1.8.0 and has some bug fixes, a new feature and some improvements. There are quite a large number of changes and
   new features compared to 1.7.1. Please read the documentation for details. Please
   also check the web site at <a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;periodically
-  for any release updates. This point release 1.8.1.2 features many bug fixes
+  for any release updates. This point release 1.8.1.3 features many bug fixes
   introduced since the original release of 1.8.0 in June 2005.</p>
 <p>This download contains the following files and directories: </p>
 
@@ -26,8 +23,7 @@ server and an MSDOS batch file for running the hsqldb utilities. </p>
 <h4>build</h4>
 
 <p>This directory contains the ant build.xml script plus MSDOS batch file for
-  build. See <a
-href="build/readmebuild.txt">readmebuild.txt</a> </p>
+  build. See <a href="build/readmebuild.txt">readmebuild.txt</a> </p>
 
 <h4>classes</h4>
 
@@ -47,10 +43,10 @@ HTML pages with HSQLDB embedded as an applet.</p>
 <p>User Guide: <a href="doc/guide/index.html">index.html</a></p>
 <p>User Guide: <a href="doc/guide/guide.pdf">guide.pdf</a></p>
 <p><br>
-  How to store a readonly database in your application jar <A HREF="doc/databaseinjar.txt">
-  databaseinjar.txt</A><br>
+  How to store a readonly database in your application jar <a href="doc/databaseinjar.txt">
+  databaseinjar.txt</a><br>
 </p>
-<p>Sample Find File application: <A HREF="doc/hsqlFindFile.html">hsqlFindFile.html</A><br>
+<p>Sample Find File application: <a href="doc/hsqlFindFile.html">hsqlFindFile.html</a><br>
 </p>
 <p>list of changes in version 1.8.0 <a href="doc/changelog_1_8_0.txt">changelog_1_8_0.txt</a>
   <br>
@@ -87,5 +83,4 @@ deployment. </p>
 <p>Fred Toussi<br>
   fredt (at) users.sourceforge.net</p>
 <p><a href="http://hsqldb.org/" target="_top">http://hsqldb.org</a>&nbsp;</p>
-</body>
-</html>
+</body></html>
